# C-ProjectE

./: .gitignore  CMakeLists.txt  ProjectEConfig.h.in  README.md  projecte.c
questions/: data.h  questions.c  questions.h  useful.c  useful.h
